<resources>
    <string name="app_name">Money Manager</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_budget">Budget</string>
    <string name="title_spending">Spending</string>
    <string name="title_balances">Balances</string>
    <string name="title_account">Account</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="months_abbr_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>